--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  licencse:
+  licencse-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
