--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,3 +19,6 @@ jobs:
       - uses: jonabc/setup-licensed@v1
         with:
           version: 2.x
+      - run: npm install # install your projects dependencies in local environment
+      - id: licensed
+        uses: jonabc/licensed-ci@v1
