--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
   licencse-check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@@v1.0.0
+      - uses: actions/checkout@master
       - uses: jonabc/setup-licensed@v1
         with:
           version: 2.x
