--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,4 @@ jobs:
         with:
           version: 2.x
       - run: npm install # install your projects dependencies in local environment
-      - id: licensed
-        uses: jonabc/licensed-ci@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - run: licensed list
