--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,6 @@ jobs:
         with:
           version: 2.x
       - run: npm install # install your projects dependencies in local environment
-      - run: licensed list
+      - uses: jonabc/licensed-ci@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
