--- a/.licensed.yml
+++ b/.licensed.yml
@@ -57,10 +57,11 @@ allowed:
 # They will be cached and checked, but will not raise errors or warnings for a
 # non-allowed license.  Dependencies on this list will still raise errors if
 # license text cannot be found for the dependency.
-reviewed:
-  bundler:
-    - bcrypt-ruby
 
-  bower:
-  - classlist # public domain
-  - octicons
+# reviewed:
+#   bundler:
+#     - bcrypt-ruby
+
+#   bower:
+#   - classlist # public domain
+#   - octicons
