--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,8 @@ jobs:
         with:
           version: 2.x
       - run: npm install # install your projects dependencies in local environment
-      - uses: jonabc/licensed-ci@v1
+      - id: licensed
+        uses: jonabc/licensed-ci@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/github-script@0.2.0
