--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,6 @@ jobs:
           script: |
             github.issues.createComment({
               ...context.repo,
-              # issue_number: ${{ steps.licensed.outputs.pr_number }}
+              issue_number: context.issue.number,
               body: 'My custom PR message'
             })
