--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,16 +16,17 @@ jobs:
         with:
           version: 2.x
       - run: npm install # install your projects dependencies in local environment
-      - id: licensed
-        uses: jonabc/licensed-ci@v1
+      - uses: jonabc/licensed-ci@v1
+        id: licensed
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/github-script@0.2.0
-        # if: always() && steps.licensed.outputs.pr_number
+        if: always() && steps.licensed.outputs.pr_number
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.issues.createComment({
               ...context.repo,
+              issue_number: ${{ steps.licensed.outputs.pr_number }}
               body: 'My custom PR message'
             })
