--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,8 @@ jobs:
         id: licensed
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+      - run: echo ${{ steps.licensed.outputs.user_branch }}
+      - run: echo ${{ steps.licensed.outputs.pr_url }}
       - uses: actions/github-script@0.2.0
         if: always() && steps.licensed.outputs.pr_number
         with:
