--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,9 +21,11 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - run: echo context.payload.pull_request.number
-      - run: |
-          jq -nc '{"body": "test comment"}' | \
-          curl -sL  -X POST -d @- \
-            -H "Content-Type: application/json" \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/$GITHUB_REPOSITORY/commits/$GITHUB_SHA/comments
+      - name: Create commit comment
+        uses: peter-evans/commit-comment@v1.0.1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          body: |
+            This is a multi-line test comment
+            - With GitHub **Markdown**
+            - Created by [commit-comment][1]
