--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,14 +17,14 @@ jobs:
           version: 2.x
       - run: npm install # install your projects dependencies in local environment
       - name: License Checker
-      - uses: jonabc/licensed-ci@v1
-        id: licensed
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        uses: jonabc/licensed-ci@v1
+          id: licensed
+          with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
         uses: peter-evans/commit-comment@v1.0.1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          body: |
-            This is a multi-line test comment
-            - With GitHub **Markdown**
-            - Created by [commit-comment][1]
+          with:
+            token: ${{ secrets.GITHUB_TOKEN }}
+            body: |
+              This is a multi-line test comment
+              - With GitHub **Markdown**
+              - Created by [commit-comment][1]
